--- a/nutrition-tracker/Base.lproj/Main.storyboard
+++ b/nutrition-tracker/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="calorie_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="nutrition_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,5 +38,179 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
+        <!--Stats View Controller-->
+        <scene sceneID="0bM-f0-fYg">
+            <objects>
+                <viewController storyboardIdentifier="statsView" id="xwM-6Z-hGM" customClass="StatsViewController" customModule="nutrition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xVW-d2-8Wq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6F-9J-Dx9">
+                                <rect key="frame" x="150" y="323" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Daily Calorie Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJx-Kx-9YK">
+                                <rect key="frame" x="128" y="294" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Npp-3s-F9Z">
+                                <rect key="frame" x="168" y="523" width="39" height="30"/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetCalorieCount:" destination="xwM-6Z-hGM" eventType="touchUpInside" id="WjN-LM-rOy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Npp-3s-F9Z" firstAttribute="centerX" secondItem="F6F-9J-Dx9" secondAttribute="centerX" id="Hos-cY-ew6"/>
+                            <constraint firstItem="Npp-3s-F9Z" firstAttribute="top" secondItem="F6F-9J-Dx9" secondAttribute="bottom" constant="179" id="V5T-9r-Vpw"/>
+                            <constraint firstItem="gJx-Kx-9YK" firstAttribute="centerX" secondItem="F6F-9J-Dx9" secondAttribute="centerX" id="bJS-Gq-jAC"/>
+                            <constraint firstItem="F6F-9J-Dx9" firstAttribute="centerX" secondItem="uUY-Q3-btw" secondAttribute="centerX" id="fMe-rH-sAo"/>
+                            <constraint firstItem="F6F-9J-Dx9" firstAttribute="centerY" secondItem="uUY-Q3-btw" secondAttribute="centerY" id="s03-Ci-gGp"/>
+                            <constraint firstItem="F6F-9J-Dx9" firstAttribute="top" secondItem="gJx-Kx-9YK" secondAttribute="bottom" constant="8" id="wGj-S4-ukL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uUY-Q3-btw"/>
+                    </view>
+                    <connections>
+                        <outlet property="calorieLabel" destination="F6F-9J-Dx9" id="RHq-od-5hp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rgK-Ow-Eg5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-773.60000000000002" y="859.52023988005999"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="qPq-nZ-8gg">
+            <objects>
+                <viewController storyboardIdentifier="cameraView" id="FjJ-tg-Abt" customClass="CameraViewController" customModule="nutrition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TY5-ue-JVv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYq-81-zP5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="99C-e3-rFd">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="99C-e3-rFd" firstAttribute="top" secondItem="wYq-81-zP5" secondAttribute="top" id="1ys-xh-JsV"/>
+                                    <constraint firstItem="99C-e3-rFd" firstAttribute="centerX" secondItem="wYq-81-zP5" secondAttribute="centerX" id="4vJ-ls-Bbm"/>
+                                    <constraint firstAttribute="bottom" secondItem="99C-e3-rFd" secondAttribute="bottom" id="Bz3-fI-jWe"/>
+                                    <constraint firstAttribute="trailing" secondItem="99C-e3-rFd" secondAttribute="trailing" id="Xfn-58-GgD"/>
+                                    <constraint firstItem="99C-e3-rFd" firstAttribute="centerY" secondItem="wYq-81-zP5" secondAttribute="centerY" id="a7a-Re-1e1"/>
+                                    <constraint firstItem="99C-e3-rFd" firstAttribute="leading" secondItem="wYq-81-zP5" secondAttribute="leading" id="gA3-hU-z8R"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad5-57-gn6">
+                                <rect key="frame" x="160" y="560" width="55" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="cambutton"/>
+                                <connections>
+                                    <action selector="takePicture:" destination="FjJ-tg-Abt" eventType="touchUpInside" id="ywM-Cc-0a6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.56455662852337463" blue="0.72336632013320923" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="wYq-81-zP5" firstAttribute="centerX" secondItem="eqM-Iq-Ffm" secondAttribute="centerX" id="1sN-b5-MIE"/>
+                            <constraint firstItem="eqM-Iq-Ffm" firstAttribute="bottom" secondItem="wYq-81-zP5" secondAttribute="bottom" id="Be4-Kz-7JI"/>
+                            <constraint firstItem="wYq-81-zP5" firstAttribute="centerY" secondItem="eqM-Iq-Ffm" secondAttribute="centerY" id="HuN-MQ-IDB"/>
+                            <constraint firstItem="wYq-81-zP5" firstAttribute="leading" secondItem="eqM-Iq-Ffm" secondAttribute="leading" id="Z9X-xh-PAR"/>
+                            <constraint firstItem="eqM-Iq-Ffm" firstAttribute="trailing" secondItem="wYq-81-zP5" secondAttribute="trailing" id="qrs-m4-flm"/>
+                            <constraint firstItem="eqM-Iq-Ffm" firstAttribute="top" secondItem="wYq-81-zP5" secondAttribute="top" constant="20" id="rAr-hL-q73"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eqM-Iq-Ffm"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="hGK-9F-EtP" appends="YES" id="jEC-io-0c9"/>
+                            <outletCollection property="gestureRecognizers" destination="MFy-ew-Mi0" appends="YES" id="lyy-7D-uad"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" id="uT9-q6-deY"/>
+                    <connections>
+                        <outlet property="cameraView" destination="wYq-81-zP5" id="tPa-rx-au3"/>
+                        <outlet property="captureButton" destination="Ad5-57-gn6" id="r19-cf-gOX"/>
+                        <outlet property="photoView" destination="99C-e3-rFd" id="63k-qp-dMT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bi2-t3-GdV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="hGK-9F-EtP"/>
+                <swipeGestureRecognizer direction="left" id="MFy-ew-Mi0"/>
+            </objects>
+            <point key="canvasLocation" x="77.599999999999994" y="853.22338830584715"/>
+        </scene>
+        <!--Food View Controller-->
+        <scene sceneID="3F7-Mm-W9h">
+            <objects>
+                <viewController storyboardIdentifier="foodView" id="Nll-pL-YbC" customClass="FoodViewController" customModule="nutrition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YDF-qd-3qX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="eqD-6L-MTx">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="27S-lN-Ped">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="gZn-AF-tJN" detailTextLabel="r5y-oc-SxX" style="IBUITableViewCellStyleSubtitle" id="4t9-Pr-Ufm">
+                                        <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4t9-Pr-Ufm" id="pVL-71-umK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gZn-AF-tJN">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="r5y-oc-SxX">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.95894290549582395" blue="0.05921958508321179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <viewLayoutGuide key="safeArea" id="Owc-PM-zId"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Ptq-hU-LpF" appends="YES" id="dSG-FA-D4c"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="27S-lN-Ped" id="3x4-Vv-zXc"/>
+                        <outlet property="tableView" destination="eqD-6L-MTx" id="6dh-vp-HBt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kmm-ob-jtu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="Ptq-hU-LpF"/>
+            </objects>
+            <point key="canvasLocation" x="927.20000000000005" y="853.22338830584715"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="cambutton" width="300" height="300"/>
+    </resources>
 </document>
