--- a/nutrition-tracker/Base.lproj/Main.storyboard
+++ b/nutrition-tracker/Base.lproj/Main.storyboard
@@ -46,38 +46,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6F-9J-Dx9">
-                                <rect key="frame" x="150" y="323" width="75" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Daily Calorie Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJx-Kx-9YK">
-                                <rect key="frame" x="128" y="294" width="119" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kitchen" translatesAutoresizingMaskIntoConstraints="NO" id="tMY-1J-WWe">
+                                <rect key="frame" x="0.0" y="-5" width="375" height="677"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6F-9J-Dx9">
+                                <rect key="frame" x="187.5" y="316" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Npp-3s-F9Z">
-                                <rect key="frame" x="168" y="523" width="39" height="30"/>
+                                <rect key="frame" x="168" y="495" width="39" height="30"/>
                                 <state key="normal" title="Reset"/>
                                 <connections>
                                     <action selector="resetCalorieCount:" destination="xwM-6Z-hGM" eventType="touchUpInside" id="WjN-LM-rOy"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily Calorie Count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJx-Kx-9YK">
+                                <rect key="frame" x="141" y="296" width="93" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="Npp-3s-F9Z" firstAttribute="centerX" secondItem="F6F-9J-Dx9" secondAttribute="centerX" id="Hos-cY-ew6"/>
                             <constraint firstItem="Npp-3s-F9Z" firstAttribute="top" secondItem="F6F-9J-Dx9" secondAttribute="bottom" constant="179" id="V5T-9r-Vpw"/>
+                            <constraint firstItem="gJx-Kx-9YK" firstAttribute="top" secondItem="uUY-Q3-btw" secondAttribute="top" constant="276" id="bHy-7Y-5HJ"/>
                             <constraint firstItem="gJx-Kx-9YK" firstAttribute="centerX" secondItem="F6F-9J-Dx9" secondAttribute="centerX" id="bJS-Gq-jAC"/>
+                            <constraint firstItem="uUY-Q3-btw" firstAttribute="trailing" secondItem="tMY-1J-WWe" secondAttribute="trailing" id="fLj-3e-pzQ"/>
                             <constraint firstItem="F6F-9J-Dx9" firstAttribute="centerX" secondItem="uUY-Q3-btw" secondAttribute="centerX" id="fMe-rH-sAo"/>
-                            <constraint firstItem="F6F-9J-Dx9" firstAttribute="centerY" secondItem="uUY-Q3-btw" secondAttribute="centerY" id="s03-Ci-gGp"/>
+                            <constraint firstItem="uUY-Q3-btw" firstAttribute="top" secondItem="tMY-1J-WWe" secondAttribute="top" constant="25" id="iOa-4o-rTX"/>
+                            <constraint firstItem="tMY-1J-WWe" firstAttribute="leading" secondItem="uUY-Q3-btw" secondAttribute="leading" id="k3f-fa-cpw"/>
                             <constraint firstItem="F6F-9J-Dx9" firstAttribute="top" secondItem="gJx-Kx-9YK" secondAttribute="bottom" constant="8" id="wGj-S4-ukL"/>
+                            <constraint firstItem="tMY-1J-WWe" firstAttribute="bottom" secondItem="uUY-Q3-btw" secondAttribute="bottom" constant="5" id="y7m-Bv-Vud"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uUY-Q3-btw"/>
                     </view>
                     <connections>
                         <outlet property="calorieLabel" destination="F6F-9J-Dx9" id="RHq-od-5hp"/>
+                        <outlet property="statsBG" destination="tMY-1J-WWe" id="OlE-Xb-6ix"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgK-Ow-Eg5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -123,16 +131,11 @@
                         <constraints>
                             <constraint firstItem="wYq-81-zP5" firstAttribute="centerX" secondItem="eqM-Iq-Ffm" secondAttribute="centerX" id="1sN-b5-MIE"/>
                             <constraint firstItem="eqM-Iq-Ffm" firstAttribute="bottom" secondItem="wYq-81-zP5" secondAttribute="bottom" id="Be4-Kz-7JI"/>
-                            <constraint firstItem="wYq-81-zP5" firstAttribute="centerY" secondItem="eqM-Iq-Ffm" secondAttribute="centerY" id="HuN-MQ-IDB"/>
                             <constraint firstItem="wYq-81-zP5" firstAttribute="leading" secondItem="eqM-Iq-Ffm" secondAttribute="leading" id="Z9X-xh-PAR"/>
                             <constraint firstItem="eqM-Iq-Ffm" firstAttribute="trailing" secondItem="wYq-81-zP5" secondAttribute="trailing" id="qrs-m4-flm"/>
                             <constraint firstItem="eqM-Iq-Ffm" firstAttribute="top" secondItem="wYq-81-zP5" secondAttribute="top" constant="20" id="rAr-hL-q73"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eqM-Iq-Ffm"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="hGK-9F-EtP" appends="YES" id="jEC-io-0c9"/>
-                            <outletCollection property="gestureRecognizers" destination="MFy-ew-Mi0" appends="YES" id="lyy-7D-uad"/>
-                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="uT9-q6-deY"/>
                     <connections>
@@ -142,8 +145,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bi2-t3-GdV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="left" id="hGK-9F-EtP"/>
-                <swipeGestureRecognizer direction="left" id="MFy-ew-Mi0"/>
             </objects>
             <point key="canvasLocation" x="77.599999999999994" y="853.22338830584715"/>
         </scene>
@@ -155,17 +156,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="eqD-6L-MTx">
+                            <tableView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="eqD-6L-MTx">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="27S-lN-Ped">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" searchBarStyle="minimal" placeholder="Search for food" id="27S-lN-Ped">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="gZn-AF-tJN" detailTextLabel="r5y-oc-SxX" style="IBUITableViewCellStyleSubtitle" id="4t9-Pr-Ufm">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="gZn-AF-tJN" detailTextLabel="r5y-oc-SxX" imageView="kzW-Hu-7zI" style="IBUITableViewCellStyleSubtitle" id="4t9-Pr-Ufm">
                                         <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4t9-Pr-Ufm" id="pVL-71-umK">
@@ -186,13 +191,16 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kzW-Hu-7zI">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.95894290549582395" blue="0.05921958508321179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="Owc-PM-zId"/>
                         <connections>
@@ -212,5 +220,6 @@
     </scenes>
     <resources>
         <image name="cambutton" width="300" height="300"/>
+        <image name="kitchen" width="768" height="1024"/>
     </resources>
 </document>
